--- a/index.html
+++ b/index.html
@@ -10,7 +10,19 @@
 		<form name="search">
 			<input type="search" name="query" required="" />
 			<button type="submit">Search</button>
+			<details>
+				<summary>Options</summary>
+				<input type="number" name="limit" min="1" max="25" value="10" placeholder="#" required="" />
+			</details>
 		</form>
-		<template id="search-result"></template>
+		<section id="results-container"></section>
+		<template id="search-result-template">
+			<div class="search-result">
+				<a href="https://en.wikipedia.org/?curid" target="_blank">
+					<h3 data-field="title"></h3>
+				</a>
+				<blockquote data-field="snippet"></blockquote>
+			</div>
+		</template>
 	</body>
 </html>
