--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 		<link rel="stylesheet" href="css/styles/index.css" media="all"></link>
 	</head>
 	<body>
+		<a href="https://en.wikipedia.org/wiki/Special:Random" target="_blank">
+			Click here for a random article
+		</a>
 		<form name="search" hidden="">
 			<input type="search" name="query" required="" />
 			<button type="submit">Search</button>
@@ -18,7 +21,7 @@
 		</form>
 		<section id="results-container"></section>
 		<template id="search-result-template">
-			<div class="search-result">
+			<div class="search-result card">
 				<a href="https://en.wikipedia.org/?curid" target="_blank">
 					<h3 data-field="title"></h3>
 					<blockquote data-field="snippet"></blockquote>
