--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<script src="https://cdn.polyfill.io/v2/polyfill.min.js" crossorigin="annonymous"></script>
 		<script type="module" src="js/index.js" async=""></script>
 		<script type="application/javasscript" src="js/index.js" nomodule="" async=""></script>
-		<link rel="stylesheet" href="css/styles/index.css" media="all"></link>
+		<link rel="stylesheet" href="css/styles/index.css" media="all" />
 	</head>
 	<body>
 		<a href="https://en.wikipedia.org/wiki/Special:Random" target="_blank">
@@ -39,22 +39,15 @@
 			</div>
 		</template>
 		<svg xmlns="http://www.w3.org/2000/svg">
-		<symbol id="edit-clear" viewBox="0 0 16 16">
-		    <title>
-		        Gnome Symbolic Icon Theme
-		    </title>
-		    <path d="M6 2L0 8l6 6h9.035A1.03 1.03 0 0 0 16 13V3c0-.53-.346-1-1.009-1zm1 3h1.031c.255.011.51.129.688.313L10 6.593l1.313-1.28c.265-.231.446-.306.687-.313h1v1c0 .286-.034.55-.25.75l-1.281 1.281 1.25 1.25c.188.188.281.454.281.719v1h-1c-.265 0-.53-.093-.719-.281l-1.28-1.281-1.282 1.28A1.015 1.015 0 0 1 8 11H7v-1c0-.265.093-.53.281-.719l1.282-1.25L7.28 6.75A.909.909 0 0 1 7 6z"/>
-
-		</symbol>
-		<symbol id="edit-find" viewBox="0 0 16 16">
-		    <title>
-		        Gnome Symbolic Icon Theme
-		    </title>
-		    <g>
-		        <path d="M6.507 1.027C3.48 1.027.997 3.506.997 6.53c0 3.026 2.482 5.505 5.51 5.505 3.03 0 5.511-2.48 5.511-5.505s-2.482-5.504-5.51-5.504zm0 2.009c1.948 0 3.5 1.55 3.5 3.495a3.479 3.479 0 0 1-3.5 3.496 3.48 3.48 0 0 1-3.5-3.496 3.479 3.479 0 0 1 3.5-3.495z" overflow="visible"/>
-		        <path d="M9.812 9.031a1 1 0 0 0-.5 1.719l4 4a1.005 1.005 0 1 0 1.407-1.438l-4-4a1 1 0 0 0-.907-.28z" overflow="visible"/>
-		    </g>
-
-		</symbol></svg>
+			<symbol id="edit-clear" viewBox="0 0 16 16">
+				<path d="M6 2L0 8l6 6h9.035A1.03 1.03 0 0 0 16 13V3c0-.53-.346-1-1.009-1zm1 3h1.031c.255.011.51.129.688.313L10 6.593l1.313-1.28c.265-.231.446-.306.687-.313h1v1c0 .286-.034.55-.25.75l-1.281 1.281 1.25 1.25c.188.188.281.454.281.719v1h-1c-.265 0-.53-.093-.719-.281l-1.28-1.281-1.282 1.28A1.015 1.015 0 0 1 8 11H7v-1c0-.265.093-.53.281-.719l1.282-1.25L7.28 6.75A.909.909 0 0 1 7 6z"/>
+			</symbol>
+			<symbol id="edit-find" viewBox="0 0 16 16">
+				<g>
+					<path d="M6.507 1.027C3.48 1.027.997 3.506.997 6.53c0 3.026 2.482 5.505 5.51 5.505 3.03 0 5.511-2.48 5.511-5.505s-2.482-5.504-5.51-5.504zm0 2.009c1.948 0 3.5 1.55 3.5 3.495a3.479 3.479 0 0 1-3.5 3.496 3.48 3.48 0 0 1-3.5-3.496 3.479 3.479 0 0 1 3.5-3.495z" overflow="visible"/>
+					<path d="M9.812 9.031a1 1 0 0 0-.5 1.719l4 4a1.005 1.005 0 1 0 1.407-1.438l-4-4a1 1 0 0 0-.907-.28z" overflow="visible"/>
+				</g>
+			</symbol>
+		</svg>
 	</body>
 </html>
